[#8733413 Fixes] About field jumps below left column when inline editing user info_box

--- a/app/stylesheets/_info_box.sass
+++ b/app/stylesheets/_info_box.sass
@@ -41,8 +41,8 @@
 
   h3, .info, table
     margin-left: 150px
-    padding-right: 15px
-    width: 300px
+    margin-right: 15px
+
   h3
     color: #b53f3c
     font-size: 24px
@@ -53,10 +53,13 @@
     font-size: 16px
     margin-bottom: 20px
     color: #454545
-    
+
+  table
+    width: 300px
+    border-spacing: 0px 20px  
+
   th
     +sans
-    padding: 8px 0
     color: #989898
     font-size: 12px
     line-height: 18px
@@ -64,7 +67,6 @@
     padding-right: 10px
     vertical-align: top
   td
-    padding: 8px 0
     font-size: 14px
     line-height: 16px
     color: #454545
