--- a/app/stylesheets/_inline_form.sass
+++ b/app/stylesheets/_inline_form.sass
@@ -2,13 +2,9 @@
 .inline-form.editable
 
   [data-field][contenteditable]
-    border: 1px solid orange
+    border: 1px solid #749dc2
     padding: 3px
     +border-radius(5px)
-    +inline-block
-
-    &.user_about
-      display: block
 
   .edit
     display: none
